--- a/frontend/app/src/components/layout/app-layout/AppLayout.module.scss
+++ b/frontend/app/src/components/layout/app-layout/AppLayout.module.scss
@@ -1,6 +1,6 @@
 .layout {
   min-height: 100vh;
-  //background-color: ;
+  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
   @include flex-column;
 }
 
