--- a/frontend/app/src/components/app/AppFooter.module.scss
+++ b/frontend/app/src/components/app/AppFooter.module.scss
@@ -1,7 +1,7 @@
 .footer {
   @include flex-row;
   justify-content: flex-end;
-  padding: var(--mantine-spacing-md);
+  padding: var(--default-padding);
 
   .actions {
     @include flex-row;
