--- a/frontend/app/src/components/app/AppLayout.module.scss
+++ b/frontend/app/src/components/app/AppLayout.module.scss
@@ -14,7 +14,7 @@
 }
 .page {
   flex-grow: 1;
-  padding-inline: var(--mantine-spacing-md);
+  padding-inline: var(--default-padding);
 }
 .footer {
   flex-grow: 0;
