refactor layout & App

--- a/frontend/app/src/styles/main.scss
+++ b/frontend/app/src/styles/main.scss
@@ -7,3 +7,7 @@
   //color: light-dark(var(--mantine-color-gray-8), var(--mantine-color-white))
   --mantine-color-text: var(--mantine-color-white);
 }
+
+html, body {
+  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+}
