--- a/frontend/app/src/styles/_utilities.scss
+++ b/frontend/app/src/styles/_utilities.scss
@@ -23,3 +23,14 @@
 }
 
 @mixin unstyled-ul {}
+
+@mixin info-page {
+  padding-block: 4rem;
+  height: 100%;
+  text-align: center;
+  @include flex-column;
+}
+
+@mixin info-page-actions {
+  margin-top: 2rem;
+}
