--- a/frontend/app/src/styles/main.scss
+++ b/frontend/app/src/styles/main.scss
@@ -11,3 +11,7 @@
 html, body {
   background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
