Add app layout & refactor providers (#4)
* basic layout

* footer

* responsive padding

* header

* refactor layout & App

* refactor & add not found page

--- a/frontend/app/src/styles/_utilities.scss
+++ b/frontend/app/src/styles/_utilities.scss
@@ -16,3 +16,21 @@
   @include flex-row;
   justify-content: space-between;
 }
+
+@mixin unstyled-link {
+  color: var(--mantine-color-text);
+  text-decoration: none;
+}
+
+@mixin unstyled-ul {}
+
+@mixin info-page {
+  padding-block: 4rem;
+  height: 100%;
+  text-align: center;
+  @include flex-column;
+}
+
+@mixin info-page-actions {
+  margin-top: 2rem;
+}
