list item styling

--- a/frontend/app/src/styles/_utilities.scss
+++ b/frontend/app/src/styles/_utilities.scss
@@ -38,7 +38,11 @@
   text-decoration: none;
 }
 
-@mixin unstyled-ul {}
+@mixin unstyled-ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
 @mixin info-page {
   padding-block: 4rem;
