--- a/frontend/app/src/styles/main.scss
+++ b/frontend/app/src/styles/main.scss
@@ -3,9 +3,6 @@
   @media (min-width: $mantine-breakpoint-sm) {
     --default-padding: var(--mantine-spacing-xl);
   }
-
-  //color: light-dark(var(--mantine-color-gray-8), var(--mantine-color-white))
-  --mantine-color-text: var(--mantine-color-white);
 }
 
 html, body {
@@ -14,4 +11,8 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+}
+
+a {
+  @include unstyled-link;
 }
