--- a/frontend/app/src/components/app/layout/AppHeader.module.scss
+++ b/frontend/app/src/components/app/layout/AppHeader.module.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   min-height: 80px;
   background-color: var(--mantine-color-body);
   margin-bottom: var(--default-padding);
@@ -9,6 +9,7 @@ header {
 
   position: sticky;
   top: 0;
+  z-index: 1;
 
   box-shadow: var(--mantine-shadow-sm);
 }
