--- a/frontend/app/src/components/lists/detail/Shoplist.module.scss
+++ b/frontend/app/src/components/lists/detail/Shoplist.module.scss
@@ -1,8 +1,3 @@
-.header {
-  margin-bottom: var(--mantine-spacing-md)
-}
-
-.list {
-  @include flex-column;
-  gap: var(--mantine-spacing-md)
+.headerActions {
+  @include flex-row-actions;
 }
