--- a/frontend/app/src/components/lists/overview/ShoplistListItem.module.scss
+++ b/frontend/app/src/components/lists/overview/ShoplistListItem.module.scss
@@ -1,9 +1,31 @@
 .unticked {
   color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-gray-6));
   font-weight: initial;
+  @include flex-row-actions;
 }
 
 .list-item-label {
   flex-grow: 1;
   @include flex-row-justify-between;
+}
+
+.list-item {
+  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-gray-8));
+}
+
+.item {
+  @include flex-row-justify-between-wrapping;
+  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-gray-8));
+  padding-block: var(--mantine-spacing-sm);
+  padding-inline: var(--mantine-spacing-md);
+  border-radius: var(--mantine-radius-sm);
+
+  &:hover {
+    background-color: var(--mantine-color-blue-light-hover);
+  }
+}
+
+.name {
+  font-weight: 600;
+  color: var(--mantine-color-blue-light-color)
 }
