run styling files through prettier

--- a/frontend/app/src/components/lists/overview/ShoplistListItem.module.scss
+++ b/frontend/app/src/components/lists/overview/ShoplistListItem.module.scss
@@ -27,5 +27,5 @@
 
 .name {
   font-weight: 600;
-  color: var(--mantine-color-blue-light-color)
+  color: var(--mantine-color-blue-light-color);
 }
